# Machine-Learning-Deep-Learning-2025

./: .gitignore  .gitmessage.txt  EXERCISE_README.md  Exercise_Card_Fraud_Detection_with_SMOTE.ipynb  IMPLEMENTATION_SUMMARY.md  README.md  python_revision.ipynb  pytorch101.ipynb
AIO2025 - Mein Code/: .gitignore
AIO2025 - Mein Code/AIO2025HW - Week1/: activation_function.ipynb  clean_code.ipynb  cnn_sift.ipynb
AIO2025 - Mein Code/HW - Week 2/: TextTokenization.ipynb  Week2_WordSuggestion.ipynb  dict.txt  list.ipynb
AIO2025 - Mein Code/HW - Week 3/: oop.ipynb  tempCodeRunnerFile.py
AIO2025 - Mein Code/HW - Week1/: activation_func.py  args_kwarg.ipynb  tempCodeRunnerFile.py
AIO2025 - Mein Code/Module 3/: Pyspark_Blank_Pipeline.ipynb  testDSA.ipynb
AIO2025 - Mein Code/Module2/: Project_2_2_Spam.ipynb  [Final]_Bản_sao_của_Project_2_2.ipynb
AIO2025 - Mein Code/Module4/: Project_Heart_Disease_Diagnosis_Part_2.ipynb  speedUp_ML_with_GPU.ipynb
AIO2025 - Mein Code/Module5/: ARCHITECTURE_OVERVIEW.md  LR_revision.ipynb  gold.csv  (+4 more)
AIO2025_MeinCode/: churn.deepnote
AIO2025_MeinCode/Module4/API/: main.py  pyproject.toml
AIO2025_MeinCode/Module7/action-recognition/: Copy_of_[Solution]_LSVIT_HMDB51.ipynb  [Exercise]_LSVIT_HMDB51.ipynb  [Exercise]_LSVIT_HMDB51_Thanh.ipynb  [Exercise]_LSVIT_HMDB51_new copy.md  [Exercise]_LSVIT_HMDB51_new.ipynb  architecture_summary.txt  check.py  continous_normalization.ipynb  extract_sequence.ipynb  main.py  pyproject.toml
CodingRevision/: cnn.ipynb  gpa.csv  gpa2.csv  score.ipynb
DataScience/: ds.ipynb
Pointer/: main.c
(+332 files in other folders)
