[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "cerebras-cloud-sdk>=1.50.1",
    "faiss-cpu",
    "fastapi-cli>=0.0.12",
    "fastapi[standard]>=0.116.2",
    "langchain>=0.3.27",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
